feat: chat session persistence (#4)
* feat: chat session persistence

* feat(ci): add test gh action

* docs: rewrote session state doc for current state

* fix: test typecheck error

* fix(ci): use readdir instead of ripgrep
